--- a/test.css
+++ b/test.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    width: 1920px;
+    width: 100%;
     height: 100px;
     background-color: black;
     display: flex;
@@ -15,6 +15,7 @@ header {
 
 .menubox {
     display: flex;
+    flex-shrink: 0;
     align-items: center;
     justify-content: space-between;
     width: 1216px;
@@ -24,42 +25,208 @@ header {
     color: #f1f1f1;
     display: flex;
     font-size: 14px;
+    width: 250px;
+    justify-content:space-between;
+}
+
+.search {
+    width: 250px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .container {
-    width: 1920px;
+    width: 100%;
     height: 1240px;
     background: url(/img/191218_article_01_170535.jpg);
     background-size: cover;
+    margin-bottom: 551px;
 }
 
 .main{
     width: 1216px;
     margin: 0 auto;
     padding: 0;
+    padding-top: 100px;
 }
 
 .main > p {
     color: #ffffff;
     opacity: 0.7;
     font-size: 80px;
+    text-align: end;
 }
 
 .main > h1 {
     color: #f1f1f1;
     font-size: 150px;
-    
+    text-align: end;
 }
 
 .contents-wrapper {
     display: flex;
     justify-content: space-between;
     text-align: center;
-    transform: translateY(919px);
+    transform: translateY(650px);
 }
 
-.contents-wrapper > img {
+.text {
+    font-size: 24px;
+}
+
+.text2 {
+    font-size: 24px;
+    color: #7d7d7d;
+}
+
+.wrap p {
+    line-height: 20px;
+    margin: 30px;
+}
+
+.btn {
+    outline: none;
+    border: none;
+    background: none;
+    color: #161616;
+    font-size: 16px;
+    margin: 30px;
+}
+
+section {
+    width: 100%;
+    height: 1507px; 
+}
+
+.big-img {
+    width: 598px;
+    height: 556px;
+}
+
+.small-img {
+    width: 289px;
+    height: 290px;
+    margin-right: 20px;
+}
+
+.small-img2 {
+    width: 289px;
+    height: 290px;
+}
+
+h2 {
+    margin-bottom: 77px;
+}
+
+#best {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 120px;
+}
+
+h2 {
+    text-align: center;
+    color: #161616;
+    font-size: 48px;
+}
+
+h2::before {
+    display: inline-block;
+    margin: 0 50px 10px 0;
+    height: 1px;
+    background-color: #161616;
+    text-shadow: none;
+    width: 463px;
+    content: '';
+}
+
+h2::after {
+    display: inline-block;
+    margin: 0 0 10px 50px ;
+    height: 1px;
+    background-color: #161616;
+    text-shadow: none;
+    width: 463px;
+    content: '';
+}
+
+.best-left {
+    margin-right: 20px;
+}
+
+h3 {
+    font-size: 48px;
+    color: #161616;
+}
+
+.subtext {
+    font-size: 24px;
+    color: #7d7d7d;
+    margin: 10px 0 10px 0;
+}
+
+.subtext2 {
+    margin-bottom: 87px; 
+}
+
+.product1 {
+    width: 289px;
+    height: 240px;
+    margin-right: 20px;
+}
+
+.product2 {
+    width: 495px;
+    height: 240px;
+}
+
+.product3 {
+    width: 290px;
+    height: 290px;
+    margin-right: 20px;
+}
+
+.product4 {
+    width: 495px;
+    height: 290px;
+    margin-right: 20px;
+}
+
+.new-up {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.new-product {
     width: 392px;
-    height: 392px;
+    height: 240px;
+    margin-right: 20px;
 }
 
+.new-down {
+    display: flex;
+    justify-content: center;
+}
+
+.btn2{
+    outline: none;
+    border: none;
+    background: none;
+    width: 392px;
+    height: 290px;
+    font-size: 24px;
+    color: #7d7d7d;
+}
+
+.treatment {
+    width: 864px;
+    height: 516px;
+}
+
+.background {
+    width: 100%;
+    height: 470px;
+    
+    
+}
