--- a/test.css
+++ b/test.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body {
+    font-family: 'Noto Sans KR', sans-serif;
+}
+
 header {
     width: 100%;
     height: 100px;
@@ -80,7 +84,7 @@ header {
 }
 
 .wrap p {
-    line-height: 20px;
+    font-size: 20px;
     margin: 30px;
 }
 
@@ -166,7 +170,7 @@ h3 {
 }
 
 .subtext2 {
-    margin-bottom: 87px; 
+    margin-bottom: 69px; 
 }
 
 .product1 {
@@ -258,7 +262,7 @@ h3 {
 
 .campaign-box {
     height: 891px;
-    margin-bottom: 160px;
+    margin-bottom: 550px;
 }
 
 .camtext{
@@ -338,27 +342,161 @@ h3 {
 }
 
 .support {
-    width: 1216px;
-    margin: 0 auto;
+    width: 100%;
+    margin-top: 113px;
+    text-align: center;
 }
 
-.supimg {
-    margin: 0 auto;
+.line::before {
+    display: inline-block;
+    margin: 0 200px 10px 0;
+    height: 1px;
+    background-color: #161616;
+    text-shadow: none;
+    width: 463px;
+    content: '';
 }
 
-.line {
-    border: 1px solid #161616;
+.line::after {
+    display: inline-block;
+    margin: 0 0 10px 200px ;
+    height: 1px;
+    background-color: #161616;
+    text-shadow: none;
+    width: 463px;
+    content: '';
 }
 
 .sup1 {
     width: 374px;
-    height: 92px;
-    margin: 0 auto;
+    height: 92px; 
+    transform: translateY(-70px);
 }
-
 
 .sup2 {
     width: 1216px;
     height: 150px;
+}
+
+.foot {
+    width: 100%;
+    height: 500px;
+    background: #030306;
+    color: #f1f1f1;
+    display: flex;
+}
+
+.left {
+    margin: 70px 180px 83px 300px;
+    font-size: 14px;
+}
+
+.right {
+    margin-top: 70px;
+    font-size: 14px;
+}
+
+.information {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    width: 546px;
+    margin-bottom: 20px;
+}
+
+.information, .btn5 {
+    margin-bottom: 20px;
+}
+
+.privacy {
+    color: #ffe116;
+}
+
+.email {
+    width: 390px;
+    height: 43px;
+    background: #7d7d7d;
+    color: #f1f1f1;
+    outline: none;
+    border: none;
+    font-size: 14px;
+}
+
+::placeholder {
+    color: #f1f1f1;
+    text-align: center;
+    font-size: 14px;
+}
+
+.btn5 {
+    width: 138px;
+    height: 43px;
+    background: #030306;
+    color: #f1f1f1;
+    outline: none;
+    border: none;
+    outline: 1px solid #f1f1f1;
+}
+
+.subscribe {
+    margin-bottom: 40px;
+}
+
+.foot-img {
+    width: 109px;
+    height: 58px;
+    margin-bottom: 12px;
+}
+
+.address {
+    margin-bottom: 20px;
+}
+
+.copyright {
+    display: flex;
+}
+
+.copy {
+    margin-right: 26px;
+}
+
+.center, .call, .talk, .talk2, .gift, .icon {
+    display: flex;
+}
+
+.center, .site, .call, .gift {
+    margin-bottom: 10px;
+}
+
+.talk {
+    margin-bottom: 80px;
+}
+
+.talk2 {
+    margin-bottom: 45px;
+}
+
+.enter{
+    margin-right: 20px;
+}
+
+.number {
+    margin-right: 6px;
+}
+
+.day {
+    margin-left: 6px;
+}
+
+.icon {
+    color: #f1f1f1;
+    width: 185px;
+    display: block;
+    justify-content: space-between;
+}
+
+i {
+    width: 24px;
+    height: 24px;
 }
 
