--- a/test.css
+++ b/test.css
@@ -3,11 +3,6 @@
     padding: 0;
 }
 
-body {
-    font-family: 'Noto Sans KR', sans-serif;
-    min-width: 1920px;
-}
-
 header {
     width: 100%;
     height: 100px;
@@ -32,23 +27,12 @@ header {
     font-size: 14px;
     width: 250px;
     justify-content:space-between;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.menu p:hover {
-    color: #7d7d7d;
-}
-
-.logo {
-    cursor: pointer;
 }
 
 .search {
     width: 250px;
     display: flex;
     justify-content: flex-end;
-    cursor: pointer;
 }
 
 .container {
@@ -86,27 +70,8 @@ header {
     transform: translateY(650px);
 }
 
-.product {
-    cursor: pointer;
-}
-
-.wrap {
-    display: block;
-    width: 392px; height: 392px;
-    overflow: hidden; 
-  }
-  
-.product { 
-    transition: 0.3s; 
-}
-
-.wrap:hover .product, .wrap:focus .product { 
-    transform: scale(1.2);
-  }
-
 .text {
     font-size: 24px;
-    font-weight: bold;
 }
 
 .text2 {
@@ -114,56 +79,19 @@ header {
     color: #7d7d7d;
 }
 
-#wrapper {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    transform: translateY(650px);
-}
-
-.wrapper p {
-    font-size: 20px;
+.wrap p {
+    line-height: 20px;
     margin: 30px;
 }
 
-.btn1 {
+.btn {
     outline: none;
     border: none;
     background: none;
     color: #161616;
     font-size: 16px;
-    font-weight: 400;
     margin: 30px;
-    cursor: pointer;
-    letter-spacing: 0;
-	-webkit-transition: all .28s ease-in-out;
-	transition: all .28s ease-in-out;
 }
-
-.btn1:after, .btn1:before {
-	border: 1px solid rgba(255, 255, 255, 0);
-	bottom: 0;
-	content: " ";
-	display: block;
-	margin: 0 auto;
-	position: relative;
-	-webkit-transition: all .28s ease-in-out;
-	transition: all .28s ease-in-out;
-	width: 0;
-}
-
-.btn1:hover:after, .btn1:hover:before {
-	border-color: #030306;
-	-webkit-transition: width 350ms ease-in-out;
-	transition: width 350ms ease-in-out;
-	width: 100%;
-}
-
-.btn1:hover:before {
-	bottom: auto;
-	top: 0;
-}
-
 
 section {
     width: 100%;
@@ -173,20 +101,21 @@ section {
 .big-img {
     width: 598px;
     height: 556px;
-    cursor: pointer;
 }
 
 .small-img {
     width: 289px;
     height: 290px;
     margin-right: 20px;
-    cursor: pointer;
 }
 
 .small-img2 {
     width: 289px;
     height: 290px;
-    cursor: pointer;
+}
+
+h2 {
+    margin-bottom: 77px;
 }
 
 #best {
@@ -199,9 +128,6 @@ h2 {
     text-align: center;
     color: #161616;
     font-size: 48px;
-    font-weight: bold;
-    margin-bottom: 77px;
-    min-width: 1216px;
 }
 
 h2::before {
@@ -240,34 +166,30 @@ h3 {
 }
 
 .subtext2 {
-    margin-bottom: 69px; 
+    margin-bottom: 87px; 
 }
 
 .product1 {
     width: 289px;
     height: 240px;
     margin-right: 20px;
-    cursor: pointer;
 }
 
 .product2 {
     width: 495px;
     height: 240px;
-    cursor: pointer;
 }
 
 .product3 {
     width: 290px;
     height: 290px;
     margin-right: 20px;
-    cursor: pointer;
 }
 
 .product4 {
     width: 495px;
     height: 290px;
     margin-right: 20px;
-    cursor: pointer;
 }
 
 .new-up {
@@ -287,37 +209,15 @@ h3 {
     justify-content: center;
 }
 
-#btn2 {
-    width: 392px;
-    display: flex;
-    justify-content: center;
-}
-
 .btn2{
-    position: relative;
     outline: none;
     border: none;
     background: none;
-    font-size: 20px;
+    width: 392px;
+    height: 290px;
+    font-size: 24px;
     color: #7d7d7d;
-    cursor: pointer;
 }
-
-.btn2:before {
-    content: '';
-    position: absolute;
-    background-color: #7768A1;
-    height: 2px;
-    width: 0;
-    bottom: 0;
-    margin-bottom: 125px;
-    transition: 0.5s;
-}
-
-.btn2:hover:before {
-    width: 100%;
-}
-
 .spa{
     float: left;
     margin-right: 64px;
@@ -326,7 +226,6 @@ h3 {
 .treatment {
     width: 864px;
     height: 516px;
-    cursor: pointer;
 }
 
 .btn3{
@@ -335,7 +234,6 @@ h3 {
     outline: none;
     border: none;
     background: none;
-    cursor: pointer;
 }
 
 .spatext{
@@ -348,6 +246,7 @@ h3 {
     height: 469px;
     border: 1px solid #030306;
     background: #030306;
+    
 }
 
 .treatbox {
@@ -359,12 +258,11 @@ h3 {
 
 .campaign-box {
     height: 891px;
-    margin-bottom: 550px;
+    margin-bottom: 160px;
 }
 
 .camtext{
     font-size: 24px;
-    font-weight: bold;
     color: #7d7d7d;
     text-align: center;
     margin-bottom: 66px;
@@ -408,7 +306,6 @@ h3 {
 
 .p2 {
     font-size: 48px;
-    font-weight: bold;
     color: #161616;
     width: 695px;
     height: 140px;
@@ -432,225 +329,36 @@ h3 {
 }
 
 .btn4 {
-    background: #7768A1;
+    outline: none;
     border: none;
-    z-index: 1;
+    background: #7768A1;
+    color: #f1f1f1;
     width: 203px;
     height: 53px;
-    font-size: 16px;
-    font-weight: lighter;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    position: relative;
-    display: inline-block;
-    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-    7px 7px 20px 0px rgba(0,0,0,.1),
-    4px 4px 5px 0px rgba(0,0,0,.1);
-    outline: none;
-}
-
-.btn4:after {
-    position: absolute;
-    content: "";
-    width: 0;
-    height: 100%;
-    top: 0;
-    right: 0;
-    z-index: -1;
-    background-color: #493c78;
-    border-radius: 5px;
-    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-     7px 7px 20px 0px rgba(0,0,0,.1),
-     4px 4px 5px 0px rgba(0,0,0,.1);
-    transition: all 0.3s ease;
-}
-
-.btn4:hover {
-    color: #fff;
-}
-
-.btn4:hover:after {
-    left: 0;
-    width: 100%;
-}
-
-.btn4:active {
-    top: 2px;
 }
 
 .support {
-    width: 100%;
-    margin-top: 113px;
-    text-align: center;
+    width: 1216px;
+    margin: 0 auto;
 }
 
-.line::before {
-    display: inline-block;
-    margin: 0 200px 10px 0;
-    height: 1px;
-    background-color: #161616;
-    text-shadow: none;
-    width: 463px;
-    content: '';
+.supimg {
+    margin: 0 auto;
 }
 
-.line::after {
-    display: inline-block;
-    margin: 0 0 10px 200px ;
-    height: 1px;
-    background-color: #161616;
-    text-shadow: none;
-    width: 463px;
-    content: '';
+.line {
+    border: 1px solid #161616;
 }
 
 .sup1 {
     width: 374px;
-    height: 92px; 
-    transform: translateY(-70px);
+    height: 92px;
+    margin: 0 auto;
 }
+
 
 .sup2 {
     width: 1216px;
     height: 150px;
-}
-
-.foot {
-    width: 100%;
-    height: 500px;
-    background: #030306;
-    color: #f1f1f1;
-    display: flex;
-}
-
-.left {
-    margin: 70px 180px 83px 300px;
-    font-size: 14px;
-}
-
-.right {
-    margin-top: 70px;
-    font-size: 14px;
-}
-
-.information {
-    display: flex;
-    justify-content: space-between;
-    font-size: 14px;
-    width: 546px;
-    margin-bottom: 20px;
-    cursor: pointer;
-}
-
-.information p:hover {
-    color: #7d7d7d;
-}
-
-.information, .btn5 {
-    margin-bottom: 20px;
-}
-
-.privacy {
-    color: #ffe116;
-}
-
-.email {
-    width: 390px;
-    height: 43px;
-    background: #030306;
-    color: #f1f1f1;
-    outline: none;
-    border: none;
-    font-size: 14px;
-    border: 1px solid #f1f1f1;
-}
-
-::placeholder {
-    color: #f1f1f1;
-    text-align: center;
-    font-size: 14px;
-}
-
-.btn5 {
-    font-size: 16px;
-    font-weight: lighter;
-    width: 138px;
-    height: 48px;
-    cursor: pointer;
-    text-transform: uppercase;
-    background-color: transparent;
-    color: #f1f1f1;
-    border: 1px solid #f1f1f1;
-    background-image: linear-gradient(120deg, transparent 0%, transparent 50%, rgb(223, 208, 222) 50%);
-    background-size: 230%;
-    transition: all, 0.5s;
-}
-
-.btn5:hover {
-    background-position: 100%;
-    color: #030306;
-}
-
-.subscribe {
-    margin-bottom: 40px;
-}
-
-.foot-img {
-    width: 109px;
-    height: 58px;
-    margin-bottom: 12px;
-}
-
-.address {
-    margin-bottom: 20px;
-}
-
-.copyright {
-    display: flex;
-}
-
-.copy {
-    margin-right: 26px;
-}
-
-.center, .call, .talk, .talk2, .gift, .icon {
-    display: flex;
-}
-
-.center, .site, .call, .gift {
-    margin-bottom: 10px;
-}
-
-.talk {
-    margin-bottom: 80px;
-}
-
-.talk2 {
-    margin-bottom: 45px;
-}
-
-.enter{
-    margin-right: 20px;
-}
-
-.number {
-    margin-right: 6px;
-}
-
-.day {
-    margin-left: 6px;
-}
-
-.icon {
-    color: #f1f1f1;
-    width: 185px;
-    display: block;
-    justify-content: space-between;
-    cursor: pointer;
-}
-
-i {
-    width: 24px;
-    height: 24px;
 }
 
