--- a/test.css
+++ b/test.css
@@ -6,6 +6,7 @@
 body {
     font-family: 'Noto Sans KR', sans-serif;
     min-width: 1920px;
+    overflow-x: hidden;
 }
 
 header {
@@ -195,20 +196,6 @@ section {
     cursor: pointer;
 }
 
-.prev {
-    left: 10px; 
-    border-radius: 50%;
-    outline: none;
-    border: none;
-} 
-
-.next { 
-    right: 10px;
-    border-radius: 50%;
-    outline: none;
-    border: none;
-} 
-
 #best {
     display: flex;
     justify-content: center;
@@ -269,6 +256,14 @@ h3 {
     cursor: pointer;
 }
 
+.content {
+    margin-top: 45px;
+}
+
+.content2 {
+    margin-top: 70px;
+}
+
 .new-box1 {
     position: relative;
     overflow: hidden;
@@ -295,7 +290,7 @@ h3 {
     height: 240px;
     text-align: center;
     transition: all .5s ease;
-    background-color: #474747;
+    background-color: #493c78;
     backface-visibility:hidden;
     transform-style: preserve-3d;
     -webkit-transform: translateY(110px) rotateX(-90deg);
@@ -318,14 +313,14 @@ h3 {
 .new-box1 .new-content1 h3 {
     font-size: 15px;
     font-weight: 700;
-    color: #fff;
+    color: #f1f1f1;
     margin-bottom:10px;
     text-transform: uppercase;
 }
 
 .new-box1 .new-content1 p {
     font-size: 13px;
-    color: #b1b1b1;
+    color: #eeeeee;
     margin:0;
 }
 
@@ -379,7 +374,7 @@ h3 {
     height: 240px;
     text-align: center;
     transition: all .5s ease;
-    background-color: #474747;
+    background-color: #3c785d;
     backface-visibility:hidden;
     transform-style: preserve-3d;
     -webkit-transform: translateY(110px) rotateX(-90deg);
@@ -402,14 +397,14 @@ h3 {
 .new-box2 .new-content2 h3 {
     font-size: 15px;
     font-weight: 700;
-    color: #fff;
+    color: #f1f1f1;
     margin-bottom:10px;
     text-transform: uppercase;
 }
 
 .new-box2 .new-content2 p {
     font-size: 13px;
-    color: #b1b1b1;
+    color: #eeeeee;
     margin:0;
 }
 
@@ -463,7 +458,7 @@ h3 {
     height: 290px;
     text-align: center;
     transition: all .5s ease;
-    background-color: #474747;
+    background-color: #785b3c;
     backface-visibility:hidden;
     transform-style: preserve-3d;
     -webkit-transform: translateY(110px) rotateX(-90deg);
@@ -486,14 +481,14 @@ h3 {
 .new-box3 .new-content3 h3 {
     font-size: 15px;
     font-weight: 700;
-    color: #fff;
+    color: #f1f1f1;
     margin-bottom:10px;
     text-transform: uppercase;
 }
 
 .new-box3 .new-content3 p {
     font-size: 13px;
-    color: #b1b1b1;
+    color: #eeeeee;
     margin:0;
 }
 
@@ -547,7 +542,7 @@ h3 {
     height: 290px;
     text-align: center;
     transition: all .5s ease;
-    background-color: #474747;
+    background-color: #5185b4;
     backface-visibility:hidden;
     transform-style: preserve-3d;
     -webkit-transform: translateY(110px) rotateX(-90deg);
@@ -570,14 +565,14 @@ h3 {
 .new-box4 .new-content4 h3 {
     font-size: 15px;
     font-weight: 700;
-    color: #fff;
+    color: #f1f1f1;
     margin-bottom:10px;
     text-transform: uppercase;
 }
 
 .new-box4 .new-content4 p {
     font-size: 13px;
-    color: #b1b1b1;
+    color: #eeeeee;
     margin:0;
 }
 
