--- a/test.css
+++ b/test.css
@@ -609,7 +609,15 @@ h3 {
     width: 864px;
     height: 516px;
     cursor: pointer;
+    opacity: 0;
+    transition: all .5s ease;
+    transform: translate(-100px, 0);
 }
+
+.treatment.show {
+    opacity: 1;
+    transform: none;
+  }
 
 .btn3{
     color: #f1f1f1;
